--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^2.0.0",
     "hardhat": "^2.12.4"
+  },
+  "dependencies": {
+    "ethers": "^5.7.2"
   }
 }
